<resources>
    <!-- General string values -->
    <string name="app_name">Collections</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to the Login screen -->
    <string name="new_mongodb_username">MongoDB Username</string>
    <string name="new_mongodb_password">MongoDB Password</string>
    <string name="connect_button_text">Connect</string>
    <string name="bottom_home">Home</string>
    <string name="bottom_search">Search</string>
    <string name="mongo_help_title">Explaining User Credentials</string>
    <string name="mongo_help_text">These are the Username and Password you
        define within MongoDB, not your general MongoDB email &amp; password.
        \n\n
        This is a template of where to find your information
        within the connection string provided by MongoDB:\n\n
        These values can be retrieved from your MongoDB Atlas instance -> click your database ->
        click your cluster -> click "Connect" -> click "Connect your application"
        \n\n\nmongodb+srv://{username}:{password}@{cluster}.{mongoURI}.mongodb.net
    </string>
    <string name="login_fragment_label">Provide user details</string>
    <string name="connection_error_title">Connection Error</string>
    <string name="connection_error_message">Please check your connection details and try again.</string>
    <string name="login_entry_error_title">Missing Credentials</string>
    <string name="login_entry_error_message">Please ensure all connection details have values!</string>

    <string name="mongodb_username">MongoDB Username <font color='#FF0000'>*</font></string>
    <string name="username_hint">As defined in MongoDB</string>
    <string name="mongodb_password">MongoDB Password <font color='#FF0000'>*</font></string>
    <string name="password_hint">As defined in MongoDB</string>
    <string name="login_button_text">Login</string>
    <string name="mongo_cluster">Mongo Cluster</string>
    <string name="mongo_cluster_hint">Cluster defined in MongoDB</string>
    <string name="mongo_uri_string">Mongo URI String</string>
    <string name="mongo_uri_hint">URI characters in MongoDB</string>
    <string name="mongo_database">Mongo Database</string>
    <string name="mongo_database_hint">Database defined in MongoDB</string>
    <string name="confirm_user_details_button">Confirm</string>

    <string name="hidden_details_hint"><font color='#1b5e20'>scroll down for details if required</font></string>
    <string name="just_an_indicator">just an indicator</string>
    <string name="click_for_help_popup">click for help popup</string>
    <string name="mongo_help_title_1">Explaining User Credentials</string>
    <string name="mongo_user_credentials">These are the Username and Password you
        define within MongoDB, not your general MongoDB email &amp; password</string>
    <string name="mongo_help_title_2">Decode MongoDB Connection String</string>
    <string name="mongo_generalized_string">This is a template of where to find your information
        within the connection string provided by MongoDB:\n\n
        These values can be retrieved from your MongoDB Atlas instance -> click your database ->
        click your cluster -> click "Connect" -> click "Connect your application"
        \n\n\nmongodb+srv://{username}:{password}@{cluster}.{mongoURI}.mongodb.net</string>
    <string name="invalid_user_or_pass">Invalid Username or Password</string>
    <string name="invalid_user_pass_message">Please enter a username and password</string>
    <string name="next_button_text">Next</string>

    <!-- Strings related to the Home fragment components -->
    <string name="home_fragment_label">Home</string>

    <!-- Strings related to the Collection Selection fragment components -->
    <string name="collection_selection_fragment_label">Collection Selection</string>
    <string name="collection_selection_label">Select a collection…</string>
    <string-array name="spinner_default">
        <item>Default Value</item>
    </string-array>

    <!-- Strings related to the Field Selection fragment components -->
    <string name="field_selection_fragment_label">Search Criteria</string>
    <string name="field_selection_label">Select a field…</string>
    <string name="search_input_label">Enter search value…</string>
    <string name="search_criteria_hint">enter search input</string>
    <string name="search_button_text">Search</string>
    <string name="back_button_text">Back</string>

    <!-- Strings related to the Results fragment components -->
    <string name="results_fragment_label">~ Results ~</string>
    <string name="results_to_collection_button">Back to Collection Selection</string>
    <string name="results_to_criteria_button">Back to Search Criteria</string>
    <string name="item_placeholder">Item (placeholder)</string>

</resources>