<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserDetails">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/mongo_cluster_label"
            android:layout_width="@dimen/text_label_width"
            android:layout_height="@dimen/text_label_height"
            android:text="@string/mongo_cluster"
            android:textSize="@dimen/text_label_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/details_padding_top"
            android:layout_marginStart="@dimen/fragment_start_padding"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mongo_cluster_text"
            android:layout_width="@dimen/text_entry_width"
            android:layout_height="@dimen/text_entry_height"
            app:layout_constraintTop_toBottomOf="@id/mongo_cluster_label"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/fragment_start_padding"
            android:layout_marginTop="@dimen/fragment_labelToEntry_padding">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mongo_cluster_hint"
                android:textSize="@dimen/text_entry_text_size"
                android:minLines="1"
                android:maxLines="1"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/mongo_uri_label"
            android:layout_width="@dimen/text_label_width"
            android:layout_height="@dimen/text_label_height"
            android:text="@string/mongo_uri_string"
            android:textSize="@dimen/text_label_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mongo_cluster_text"
            android:layout_marginTop="@dimen/fragment_entryToLabel_padding"
            android:layout_marginStart="@dimen/fragment_start_padding"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mongo_uri_text"
            android:layout_width="@dimen/text_entry_width"
            android:layout_height="@dimen/text_entry_height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mongo_uri_label"
            android:layout_marginStart="@dimen/fragment_start_padding"
            android:layout_marginTop="@dimen/fragment_labelToEntry_padding">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mongo_uri_hint"
                android:textSize="@dimen/text_entry_text_size"
                android:minLines="1"
                android:maxLines="1"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/mongo_database_label"
            android:layout_width="@dimen/text_label_width"
            android:layout_height="@dimen/text_label_height"
            android:text="@string/mongo_database"
            android:textSize="@dimen/text_label_size"
            app:layout_constraintTop_toBottomOf="@id/mongo_uri_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/fragment_entryToLabel_padding"
            android:layout_marginStart="@dimen/fragment_start_padding"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mongo_database_text"
            android:layout_width="@dimen/text_entry_width"
            android:layout_height="@dimen/text_entry_height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mongo_database_label"
            android:layout_marginStart="@dimen/fragment_start_padding"
            android:layout_marginTop="@dimen/fragment_labelToEntry_padding">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mongo_database_hint"
                android:textSize="@dimen/text_entry_text_size"
                android:minLines="1"
                android:maxLines="1"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/confirm_user_details_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/details_button_height"
            android:text="@string/confirm_user_details_button"
            android:textSize="@dimen/details_button_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mongo_database_text"
            android:layout_marginTop="@dimen/details_button_top_padding"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>