<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FieldSelectionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/field_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/label_top_margin"
            android:text="@string/field_selection_label"
            android:textSize="@dimen/label_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Spinner
            android:id="@+id/field_spinner"
            android:layout_width="@dimen/spinner_width"
            android:layout_height="@dimen/spinner_height"
            android:layout_marginTop="@dimen/spinner_top_margin"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            android:textSize="@dimen/spinner_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/field_label" />

        <TextView
            android:id="@+id/search_data_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/second_label_padding"
            android:text="@string/search_input_label"
            android:textSize="@dimen/label_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/field_spinner"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_criteria_entry"
            android:layout_width="@dimen/text_entry_width"
            android:layout_height="@dimen/text_entry_height"
            android:layout_marginTop="@dimen/text_entry_top_margin"
            app:layout_constraintTop_toBottomOf="@id/search_data_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_criteria_entry_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_criteria_hint"
                android:inputType="text"
                android:maxLines="1"
                android:minLines="1"
                android:textSize="@dimen/entry_text_size"
                tools:ignore="TextContrastCheck"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/field_search_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_marginBottom="230dp"
            android:text="@string/search_button_text"
            android:textSize="@dimen/button_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/field_back_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_marginBottom="100dp"
            android:text="@string/back_button_text"
            android:textSize="@dimen/button_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>